--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,35 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --xxxlarge-font: 55px;
+  --xxlarge-font: 32px;
+  --xlarge-font: 24px;
+  --large-font: 22px;
+  --regular-font: 20px;
+  --medium-font: 18px;
+  --small-font: 14px;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
+
+@layer utilities {
+  .clip-zero-circle {
+    clip-path: circle(0% at 50% 50%);
+  }
+}
+.blind-effect {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: theme("colors.zinc.900");
+  transform-origin: 50% 50%;
 }
