feat.메인화면의 인기밸런스게임 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,6 @@ body {
   background: theme("colors.zinc.900");
   transform-origin: 50% 50%;
 }
+.swiper-pagination-bullet-active {
+  background: rgba(129, 140, 248, 1) !important;
+}
