--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,19 @@ body {
 .swiper-pagination-bullet-active {
   background: rgba(129, 140, 248, 1) !important;
 }
+.example_responsive_1 {
+  width: 320px;
+  height: 100px;
+}
+@media (min-width: 500px) {
+  .example_responsive_1 {
+    width: 468px;
+    height: 60px;
+  }
+}
+@media (min-width: 800px) {
+  .example_responsive_1 {
+    width: 728px;
+    height: 90px;
+  }
+}
